@@ -8,7 +8,7 @@ AUX reconfig-3 1058 RMD160 d969dac6423a0e3ba545c66fd61be298d2f014a2 SHA1 f6c026c
 DIST otrs-2.4.7.tar.bz2 14292355 RMD160 5427ee356ab54951137fa3284df96ad9ddbeca5d SHA1 63d41a32bdae2462922081b30e25baffaaa4478a SHA256 0de2711e3680392461c233aaed22b38bb29745af22435427b015586ee19848ce
 DIST otrs-3.0.0-beta3.tar.bz2 15501058 RMD160 e001336f79d0661dd16a314a696a1f00c4e5e0ba SHA1 d4e45874b4a08f8784401d40559ab2d75d020fdc SHA256 f5c4f2254e20ea07c469c38e6bb2e2e16f1aecc2a63f33bea903be01ac4d3490
 EBUILD otrs-2.4.7.ebuild 3188 RMD160 26a3d9f156d0ae59b75425ffb007e1d7373592ae SHA1 757e7b6b58ebeca78c45eb5eb65d8281683210ee SHA256 70303d37134970cfce3bb63925b07d1ff930bebfe444d257a890dddf61782ddf
-EBUILD otrs-3.0.0_beta3.ebuild 3235 RMD160 354e088d80530116fbba7bc12b3b4f2d0dc3f3eb SHA1 7bf69e4abf989d6c324f1995bbdb07469e134901 SHA256 e6b5cfc38e7fa27f6388dc93203fabeba1771f48a84c67e7393fee65b6cc50e8
+EBUILD otrs-3.0.0_beta3.ebuild 3265 RMD160 f2f844fa507d77352d24b8a2d2e32340541bcc59 SHA1 14f2a33c3efadeed7ca4944df72a142d3d980a2b SHA256 1b9bee5578fcdfd1b9eff8fa24803b5bcf37d7c4b4a2fd8393ef6124cd14b253
 MISC ChangeLog 1922 RMD160 308eee757550c203b8e2d7a77eea3fbfd2cae406 SHA1 d324f91d8f6a6472e58c28597ab991ee528f2a75 SHA256 3f1636d646e3166572d1103219556ccf572d0a1bc8c5da6ada94ea8f7be1ee1f
 MISC metadata.xml 206 RMD160 8dd7de79a9a1b903beddcd34cfaff09a75116392 SHA1 bbd1a4893458a7c784bec14353fbc79b69ee9a2f SHA256 8d5d94477eedf2db244efcce8f1c9ab36e01e6674a93e8e57581c305c4c34977
 MISC postinstall-ru-2.txt 1306 RMD160 d6657c57cd05d30d37dd57a40b9564fad66eaffb SHA1 af10ee3926084fdf20a9f86209635f92afc8ba99 SHA256 548e1584c6c05dc37b3aa6cfca08881a8875d6571cb346b63ce1772ef5b39cb2
